# fair-baccarat

./: .travis.yml  Cargo.toml  README.md  appveyor.yml  install.sh  release
benches/: main.rs
ci/: before_deploy.sh  script.sh
src/: card.rs  cli.rs  lib.rs  main.rs  rng.rs  wasm.rs
tests/: web.rs
