[package]
name = "fair-baccarat"
version = "0.1.2-alpha.0"
authors = ["Lucas Holder <lucasholderx@gmail.com>"]
edition = "2018"
description = "Deterministically plays games of baccarat using a server seed, client seed and nonce."
license = "MIT"
readme = "README.md"
repository = "https://github.com/lucasholder/fair-baccarat.git"
keywords = ["provably-fair", "baccarat", "gambling"]
categories = ["cryptography", "command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-crypto = "^0.2"
clap = "^2.33"

[dev-dependencies]
rust-crypto = "^0.2"
bencher = "0.1.5"

[[bin]]
name = "fair-baccarat"
path = "src/main.rs"

[[bench]]
name = "benches"
path = "benches/main.rs"
harness = false
